--- a/resume/sections/1_heading.tex
+++ b/resume/sections/1_heading.tex
@@ -1,4 +1,4 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-	\textbf{\href{http://example.com/}{\Large John Doe}} & Email : \href{mailto:john.doe@example.com}{john.doe@example.com}\\
+	\textbf{\href{http://example.com/}{\Large Jooowh Doe}} & Email : \href{mailto:john.doe@example.com}{john.doe@example.com}\\
 	\href{http://example.com/}{http://www.example.com} & Mobile : +1-234-567-8901 \\
 \end{tabular*}
